--- a/cft-templates/ec2-advanced-winsecure-desktop.yml
+++ b/cft-templates/ec2-advanced-winsecure-desktop.yml
@@ -1,7 +1,7 @@
 Metadata: 
   License: Apache-2.0
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'AWS CloudFormation Template to create an GPU based EC2 Windows Advanced Desktop for Secure Research instance with NICE DCV pre installed..'
+Description: 'AWS CloudFormation Template to create an GPU based EC2 windows instance with NICE DCV pre installed..'
 Parameters:
 
   Namespace:
@@ -43,8 +43,7 @@ Parameters:
       [
         t3.medium,
         t3.large,
-        t3.xlarge,
-      
+        t3.xlarge
       ]
     ConstraintDescription: must be a valid EC2 instance type.
   EBSVolumeSize:
@@ -66,7 +65,9 @@ Resources:
         Statement:
           - Effect: Allow
             Action:
-              - ssm:*
+              - ssm:PutParameter
+              - ssm:GetParameter
+              - ssm:DescribeParameters
             Resource: "*"
 
   InstanceRolePermissionBoundary:
@@ -93,6 +94,14 @@ Resources:
             Action:
               - 'ssm:*'
             Resource: '*'
+          - Effect: Allow
+            Action:
+              - 'ssmmessages:*'
+            Resource: '*'
+          - Effect: Allow
+            Action:
+              - 'ec2messages:*'
+            Resource: '*'            
           - Effect: Deny
             NotAction:
               - 's3:*'
@@ -124,6 +133,7 @@ Resources:
             PolicyDocument: !Ref IamPolicyDocument
       ManagedPolicyArns:
         - Ref: SSMPolicy
+        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
       PermissionsBoundary: !Ref InstanceRolePermissionBoundary        
 
   InstanceProfile:
@@ -152,7 +162,7 @@ Resources:
     Properties:
       LaunchTemplate:
         LaunchTemplateName: "RG-IMDSv2"
-        Version: 1             
+        Version: 1              
       UserData:
         Fn::Base64: !Sub |
           <powershell>     
@@ -178,8 +188,8 @@ Resources:
           <persist>true</persist>          
           
       InstanceType: !Ref 'InstanceType'
-      ImageId: ami-03cb188048b457a84
-      IamInstanceProfile: !Ref InstanceProfile     
+      ImageId: "{{resolve:ssm:/RL/RG/StandardCatalog/windows-nice-dcv-ami}}"
+      IamInstanceProfile: !Ref InstanceProfile
       BlockDeviceMappings:
         - DeviceName: /dev/sda1
           Ebs:
@@ -218,7 +228,8 @@ Resources:
           Value: !Sub ${AWS::StackName}
         - Key: Name
           Value: !Join ["-", [Ref: Namespace, "ec2-linux"]]  
-      
+         - Key: PatchGroup
+          Value: RG-PatchGroup-Windows     
   InstanceSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
