--- a/rg-alb-route53.yml
+++ b/rg-alb-route53.yml
@@ -32,6 +32,51 @@ Conditions:
   securecommunication: !Not [!Equals [!Ref CertificateArn, ""]]
   nonsecurecommunication: !Equals [!Ref CertificateArn, ""]
 Resources:
+  ALBAccessLogsBucket:
+    Type: AWS::S3::Bucket
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W35
+            reason: S3 bucket hosting access logs shouldn't have access logging configured
+    Properties:
+      AccessControl: LogDeliveryWrite
+      VersioningConfiguration:
+        Status: Enabled    
+      OwnershipControls:
+        Rules:
+          - ObjectOwnership: BucketOwnerPreferred              
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: True
+        BlockPublicPolicy: True
+        IgnorePublicAcls: True
+        RestrictPublicBuckets: True
+
+  ALBAccessLogsBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref 'ALBAccessLogsBucket'
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Sid: ELB-Account-Allow
+            Effect: Allow
+            Principal:
+              AWS: "arn:aws:iam::033677994240:root"
+            Action: "s3:PutObject"
+            Resource: !Sub "arn:aws:s3:::${ALBAccessLogsBucket}/RG-Application-ALB/AWSLogs/${AWS::AccountId}/*"
+          - Sid: RG-ALB-AccessLogsPolicy
+            Action:
+              - "s3:PutObject"
+            Effect: Allow
+            Resource: !Sub "arn:aws:s3:::${ALBAccessLogsBucket}/RG-Application-ALB/*"
+            Principal:
+              Service: 'elasticloadbalancing.amazonaws.com'
+            Condition:
+              StringEquals:
+                "aws:SourceAccount": !Sub "${AWS::AccountId}"
+              ArnLike:
+                "aws:SourceArn": !Sub "arn:aws:elasticloadbalancing:${AWS::Region}:${AWS::AccountId}:loadbalancer/app/RG-Application-ALB/*"
   RGInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
@@ -69,6 +114,13 @@ Resources:
             SecurityGroups:
               - !GetAtt RGInstanceSecurityGroup.GroupId
             IpAddressType: "ipv4"
+            LoadBalancerAttributes:
+              - Key: 'access_logs.s3.enabled'
+                Value: 'true'
+              - Key: 'access_logs.s3.bucket'
+                Value: !Ref ALBAccessLogsBucket
+              - Key: 'access_logs.s3.prefix'
+                Value: 'RG-Application-ALB'            
             Tags:
               - Key: CostCenter
                 Value: PG000000
@@ -185,7 +237,7 @@ Resources:
                 HttpCode: "200"
             HealthyThresholdCount: 5
             VpcId: !Ref VPC
-            Name: "Rg-target-group-1"
+            Name: "Rg-target-group-2"
             HealthCheckEnabled: true
   RGHTTPListener1:
         Type: "AWS::ElasticLoadBalancingV2::Listener"
