--- a/SRE/Egress/Setup-templates/sns-topic.yml
+++ b/SRE/Egress/Setup-templates/sns-topic.yml
@@ -35,37 +35,41 @@ Resources:
           Value: txs908@miami.edu
         - Key: UHITOwner
           Value: txs908
-      Subscription: []
-      TopicPolicy:
-        PolicyDocument:
-          Version: '2008-10-17'
-          Id: "__default_policy_ID"
-          Statement:
-            - Sid: "Allow_Permission_To_Lambda"
-              Effect: Allow
-              Principal:
-                AWS: !Ref MainAccount
-              Action:
-                - SNS:Publish
-                - SNS:RemovePermission
-                - SNS:SetTopicAttributes
-                - SNS:DeleteTopic
-                - SNS:ListSubscriptionsByTopic
-                - SNS:GetTopicAttributes
-                - SNS:AddPermission
-                - SNS:Subscribe
-              Resource: !Sub "arn:aws:sns:us-east-1:${MainAccount}:Research-Product-Events"
-            - Sid: "__default_statement_ID"
-              Effect: Allow
-              Principal:
-                AWS: "*"
-              Action:
-                - SNS:Publish
-                - SNS:RemovePermission
-                - SNS:SetTopicAttributes
-                - SNS:DeleteTopic
-                - SNS:ListSubscriptionsByTopic
-                - SNS:GetTopicAttributes
-                - SNS:AddPermission
-                - SNS:Subscribe
-              Resource: !Sub "arn:aws:sns:us-east-1:${ProjectAccount}:Research-Product-Events"
+
+  ResearchProductEventsTopicPolicy:
+    Type: AWS::SNS::TopicPolicy
+    Properties:
+      Topics:
+        - !Ref ResearchProductEventsTopic
+      PolicyDocument:
+        Version: '2008-10-17'
+        Id: "__default_policy_ID"
+        Statement:
+          - Sid: "Allow_Permission_To_Lambda"
+            Effect: Allow
+            Principal:
+              AWS: !Ref MainAccount
+            Action:
+              - SNS:Publish
+              - SNS:RemovePermission
+              - SNS:SetTopicAttributes
+              - SNS:DeleteTopic
+              - SNS:ListSubscriptionsByTopic
+              - SNS:GetTopicAttributes
+              - SNS:AddPermission
+              - SNS:Subscribe
+            Resource: !Sub "arn:aws:sns:us-east-1:${MainAccount}:Research-Product-Events"
+          - Sid: "__default_statement_ID"
+            Effect: Allow
+            Principal:
+              AWS: "*"
+            Action:
+              - SNS:Publish
+              - SNS:RemovePermission
+              - SNS:SetTopicAttributes
+              - SNS:DeleteTopic
+              - SNS:ListSubscriptionsByTopic
+              - SNS:GetTopicAttributes
+              - SNS:AddPermission
+              - SNS:Subscribe
+            Resource: !Sub "arn:aws:sns:us-east-1:${ProjectAccount}:Research-Product-Events"
