Add kms permissions to lambda execution role

--- a/SRE/Egress/Setup-templates/egress-zip-copy.yaml
+++ b/SRE/Egress/Setup-templates/egress-zip-copy.yaml
@@ -43,6 +43,7 @@ Resources:
                 Action:
                   -  "s3:*"
                   -  "s3-object-lambda:*"
+                  -  "kms:*"
                 Resource: "*"
   LambdaFunction:
     Type: AWS::Lambda::Function
